<resources>
    <string name="app_name">Phase 10 Counter</string>
    <string name="phase1"><b>Round 1: </b>2 sets of 3</string>
    <string name="phase2"><b>Round 2: </b>1 set of 3 + 1 run of 4</string>
    <string name="phase3"><b>Round 3: </b>1 set of 4 + 1 run of 4</string>
    <string name="phase4"><b>Round 4: </b>1 run of 7</string>
    <string name="phase5"><b>Round 5: </b>1 run of 8</string>
    <string name="phase6"><b>Round 6: </b>1 run of 9</string>
    <string name="phase7"><b>Round 7: </b>2 sets of 4</string>
    <string name="phase8"><b>Round 8: </b>7 cards of one color</string>
    <string name="phase9"><b>Round 9: </b>1 set of 5 + 1 set of 2</string>
    <string name="phase10"><b>Round 10: </b>1 set of 5 + 1 set of 3</string>
    <string name="flip_phase1"><b>Round 1: </b>2 color runs of 2</string>
    <string name="flip_phase2"><b>Round 2: </b>A color run of 2 and a set of 2</string>
    <string name="flip_phase3"><b>Round 3: </b>A color run of 2 and a set of 3</string>
    <string name="flip_phase4"><b>Round 4: </b>A color run of 3 and a set of 2</string>
    <string name="flip_phase5"><b>Round 5: </b>A color run of 4 and a set of 2</string>
    <string name="flip_phase6"><b>Round 6: </b>2 sets of 3</string>
    <string name="flip_phase7"><b>Round 7: </b>A color run of 3 and a set of 3</string>
    <string name="flip_phase8"><b>Round 8: </b>A color run of 5 and a set of 2</string>
    <string name="flip_phase9"><b>Round 9: </b>A color run of 2 and a set of 4</string>
    <string name="flip_phase10"><b>Round 10: </b>A color run of 3 and 2 sets of 2</string>
    <string name="masters_phase1"><b>Round 1: </b>Two sets of 3 cards (e.g., 3 of the same number)</string>
    <string name="masters_phase2"><b>Round 2: </b>One set of 3 cards + one set of 3 cards (e.g., 3 of the same number)</string>
    <string name="masters_phase3"><b>Round 3: </b>One set of 3 cards + a run of 4 cards</string>
    <string name="masters_phase4"><b>Round 4: </b>Two sets of 3 cards</string>
    <string name="masters_phase5"><b>Round 5: </b>One set of 3 cards + a run of 4 cards</string>
    <string name="masters_phase6"><b>Round 6: </b>A run of 9 cards</string>
    <string name="masters_phase7"><b>Round 7: </b>A run of 8 cards</string>
    <string name="masters_phase8"><b>Round 8: </b>One set of 3 cards + a run of 4 cards</string>
    <string name="masters_phase9"><b>Round 9: </b>Two sets of 4 cards</string>
    <string name="masters_phase10"><b>Round 10: </b>A run of 7 cards</string>
    <string name="points">Points</string>
    <string name="addPlayer">Add Player</string>
    <string name="start">Start</string>
    <string name="openPhases">Open Rounds:</string>
    <string name="ok">OK</string>
    <string name="playerMustHaveAName">Player must have a name</string>
    <string name="areYouSureAllMatchDataWillBeLost">Are you sure? All data of this game will be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phases">Sets</string>
    <string name="name">Name</string>
    <string name="none">none</string>
    <string name="atLeast2PlayersRequired">At least 2 players required!</string>
    <string name="phasesOf">Rounds of</string>
    <string name="date">Date</string>
    <string name="back">Back</string>
    <string name="highscores">High scores</string>
    <string name="newVersionClickToDownload">New Version available. Click here to Download</string>
    <string name="errorWhileCheckingForUpdate">Error while checking for updates</string>
    <string name="app_license">App License</string>
    <string name="about">About</string>
    <string name="GPLv3License">GPLv3-License</string>
    <string name="version">Version</string>
    <string name="githubRepository">GitHub Repository</string>
    <string name="release_notes">Release notes</string>
    <string name="settings">Settings</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="allOpenSourceLicenses">All open source licenses</string>
    <string name="autoCheckForUpdates">Automatically check for updates</string>
    <string name="title_addNewGame">Add new Game</string>
    <string name="gameName">Game name</string>
    <string name="playerName">Player name</string>
    <string name="deletePlayer">Delete Player</string>
    <string name="closeNavigationDrawer">Close Navigationdrawer</string>
    <string name="title_selectGame">Select Game</string>
    <string name="menu">Menu</string>
    <string name="showPointHistory">Show point history</string>
    <string name="showDetails">Details</string>
    <string name="hideDetails">Hide details</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="enableDynamicColors">Dynamic Colors</string>
    <string name="useSystemColors">Use system colors</string>
    <string name="followSystemTheme">Follow system theme</string>
    <string name="darkTheme">Dark theme</string>
    <string name="highscoresError">High scores error</string>
    <string name="highscoresLoading">Loading high scores</string>
    <string name="selectGameLoading">Loading games</string>
    <string name="selectGameError">Error loading games</string>
    <string name="settingsLoading">Loading settings</string>
    <string name="settingsError">Error settings</string>
    <string name="gameScreenLoading">Loading game</string>
    <string name="gameScreenError">Error loading game</string>
    <string name="gameMustHaveAName">Game must have a name</string>
    <string name="noGamesAddedYet">No games added yet</string>
    <string name="noHighscoresYet">No high scores yet</string>
    <string name="errorAppLicence">Error loading licence</string>
    <string name="loadingAppLicence">Loading app licence</string>
    <string name="dontChangeUiOnWideScreen">Don\'t change UI on wide screens</string>
    <string name="cancel">Cancel</string>
    <string name="deleteGame">Delete game</string>
    <string name="resetGame">Reset game</string>
    <string name="backupGames">Backup all games</string>
    <string name="restoreGames">Restore games</string>
    <string name="backupFileName">Phase10 backup</string>
    <string name="errorCreatingBackup">Error while creating backup</string>
    <string name="errorWhileRestoring">Error while restoring</string>
    <string name="thisWillOverwriteAllExistingData">This will overwrite all existing data.</string>
    <string name="highscoresHint">Delete or reset a game, where a player finished all rounds to add a highscore.</string>
    <string name="appRestartMayBeRequired">App restart may be required.</string>
    <string name="onlyNumbersAreAllows">Only numbers are allowed</string>
    <string name="deleted">Deleted</string>
    <string name="editValue">Edit Value</string>
    <string name="gameType">Game Type</string>
    <string name="gameTypeStandard">Standard</string>
    <string name="gameTypeFlip">Flip</string>
    <string name="gameTypeMasters">Masters</string>
</resources>